# clDetect

./: CMakeLists.txt  main.cpp
include/: brightSpotKernel.cl  pathFounder.h
